
19-12-2019, Coruja
[sphere.ini]: Removed ArriveDepartMsg, AllowNewbTransfer, CanUndressPets, NTService and TelnetLog settings
	-Region arrive/depart messages can be softcoded and don't need to be hardcoded
	-Pets now can receive newbie items and be undressed by default (this can also be softcoded and doesn't require hardcoded settings)
	-Dropped support for Windows NT service to avoid performance loss (it's not recommended run a high priority game server as a low priority background service)
	-For safety purposes now all telnet console commands are logged by default
[sphere_msgs.scp]: Removed messages 'msg_arrdep_*' and 'msg_steal'

21-12-2019, Coruja
Fixed: MulFiles setting on sphere.ini not working correctly.
Removed: Support for obsolete console auto-complete feature on Windows build (sphere.dic file).

22-12-2019, Coruja
Changed: Updated internal Libev libs v4.27 to v4.31.

02-01-2020, Coruja
Fixed: Function DUPE not duping some properties correctly.
Fixed: GM chars unable to drop items on player bankbox.

04-01-2020, Coruja
Fixed: OF_PetSlots optional flag on sphere.ini not decreasing follower slots when pet die.
Fixed: Human NPCs calling too many guards when they see an criminal/murderer.
Fixed: Guard NPCs walking too far away from the location where they got called.
Changed: Char trigger @PetDesert now will be called when the pet get released in any situation instead only when it got starving or attacked by its master.

08-01-2020, Coruja
Fixed: Item pickup setting TARGP/TARGPRV char properties even when pickup fail.
[sphere_backward_compatibility.scp]: Updated 'addnpc' and 'static' functions to support amount as 2nd argument (eg: '.addnpc c_pig 5' will create 5 pigs)
[sphere_spells.scp]: Fixed wrong LOCAL.FieldWidth value on field spells
[sphere_msgs.scp]: Updated message list with the following changes
	-Removed: npc_pet_deserted, party_add_too_fast, hl_one_client
	-Updated: magery_5, msg_frozen
	-Fixed typo: forensics_carbedby -> forensics_carvedby